--- a/news
+++ b/news
@@ -2,6 +2,31 @@
     <h3>NEWS</h3>
     <p>explore • enjoy • shop</p>
 </div>
+<div class="store_list_head main_container">
+    <div class="row hidden_phone">
+        <div class="col-md-3">
+            <h5><a href="/promotions">PROMOTIONS</a></h5>
+        </div>
+        <div class="col-md-3 text-center">
+            <h5><a href="/events">EVENTS</a></h5>
+        </div>
+        <div class="col-md-3 text-center">
+            <h5><a href="/development">DEVELOPMENT</a></h5>
+        </div>
+        <div class="col-md-3 text-right">
+            <h5><a href="/news">NEWS</a></h5>
+        </div>
+    </div>
+    <h5 class="text-center tap_here show_phone">
+        <select id="option_selector" class="link_selector">
+            <option value="" disabled selected>TAP FOR MORE OPTIONS</option>
+            <option value="/promotions">Promotions</option>
+            <option value="/events">Events</option>
+            <option value="/development">Development</option>
+            <option value="/news">News</option>
+        </select>
+    </h5>
+</div>
 <div class="margin_20"></div>
 <div class="content_container main_container mobile_padding">
     <div class="row">
