Halifax Centre 2.0  /news

--- a/news
+++ b/news
@@ -14,7 +14,7 @@
             <h5><a href="/development">DEVELOPMENT</a></h5>
         </div>
         <div class="col-md-3 text-right">
-            <h5><a href="/news">CONTEST</a></h5>
+            <h5><a href="/contests">CONTEST</a></h5>
         </div>
     </div>
     <h5 class="text-center tap_here show_phone">
