--- a/news
+++ b/news
@@ -4,16 +4,16 @@
 </div>
 <div class="store_list_head main_container">
     <div class="row hidden_phone">
-        <div class="col-md-3">
+        <div class="col-md-3 spec_offer">
             <h5><a href="/promotions">PROMOTIONS</a></h5>
         </div>
-        <div class="col-md-3 text-center">
+        <div class="col-md-3 spec_offer">
             <h5><a href="/events">EVENTS</a></h5>
         </div>
-        <div class="col-md-3 text-center">
+        <div class="col-md-3 spec_offer">
             <h5><a href="/development">DEVELOPMENT</a></h5>
         </div>
-        <div class="col-md-3 text-right">
+        <div class="col-md-3 spec_offer">
             <h5 class="contest_link"><a href="/contests">CONTEST</a></h5>
         </div>
     </div>
