--- a/news
+++ b/news
@@ -4,26 +4,26 @@
 </div>
 <div class="store_list_head main_container">
     <div class="row hidden_phone">
-        <div class="col-md-3 spec_offer">
-            <h5><a href="/promotions">PROMOTIONS</a></h5>
+        <div class="col-md-3 plan_visit">
+            <h5><a href="/hours">HOURS</a></h5>
         </div>
-        <div class="col-md-3 spec_offer">
-            <h5><a href="/events">EVENTS</a></h5>
+        <div class="col-md-3 plan_visit">
+            <h5 class="active_heading">TOURIST INFO</h5>
         </div>
-        <div class="col-md-3 spec_offer">
-            <h5><a href="/development">DEVELOPMENT</a></h5>
+        <div class="col-md-3 plan_visit">
+            <h5 class="news_link"><a href="/news">NEWS</a></h5>
         </div>
-        <div class="col-md-3 spec_offer">
-            <h5 class="contest_link"><a href="/contests">CONTEST</a></h5>
+        <div class="col-md-3 plan_visit">
+            <h5><a href="http://prettygreathsc.com/categories/redevelopment%20news" target="_blank">REDEVELOPMENT</a></h5>
         </div>
     </div>
     <h5 class="text-center tap_here show_phone">
         <select id="option_selector" class="link_selector">
             <option value="" disabled selected>TAP FOR MORE OPTIONS</option>
-            <option value="/promotions">Promotions</option>
-            <option value="/events">Events</option>
-            <option value="/development">Development</option>
-            <option class="contest_link" value="/contests">Contest</option>
+            <option value="/hours">Hours</option>
+            <option value="/tourist_info">Tourist Info</option>
+            <option value="/news">News</option>
+            <option value="http://prettygreathsc.com/categories/redevelopment%20news">REDEVELOPMENT</option>
         </select>
     </h5>
 </div>
