--- a/news
+++ b/news
@@ -13,9 +13,9 @@
         <div class="col-md-3 plan_visit">
             <h5 class="active_heading">NEWS</h5>
         </div>
-        <div class="col-md-3 plan_visit">
-            <h5><a href="//prettygreathsc.com/categories/redevelopment%20news" target="_blank">REDEVELOPMENT</a></h5>
-        </div>
+        <!--<div class="col-md-3 plan_visit">-->
+        <!--    <h5><a href="//prettygreathsc.com/categories/redevelopment%20news" target="_blank">REDEVELOPMENT</a></h5>-->
+        <!--</div>-->
     </div>
     <h5 class="text-center tap_here show_phone">
         <select id="option_selector" class="link_selector">
